--- a/index.html
+++ b/index.html
@@ -4,33 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="#">
-         <img src="./imiges/logo.svg" alt="Логотип Сучасної пекарні">
-         </a>
+        <a href="./index.html">
+          <img src="./imiges/logo.svg" alt="Логотип Сучасної пекарні" />
+        </a>
         <ul>
-          <li><a href="#">Франшиза</a></li>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li>
+            <a class="link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li><a class="link" href="#chefs-section">Шеф Кухарі</a></li>
+          <li><a class="link" href="#formats-section">Формати</a></li>
+          <li><a class="link" href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
-      <section>
-        <h1>Сучасна пекарня</h1>
+      <section class="main-section">
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
-      <section>
-        <ul>
+      <section id="traditions-section">
+        <ul class="advantages-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -40,90 +43,107 @@
           <span>5 хвилин і замовлення готове</span>. А ще у наших пекарень
           стильний дизайн та висока якість обслуговування!
         </p>
-        <img src="./imiges/baker-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою">
+        <img
+          src="./imiges/baker-man.jpg"
+          alt="Чоловік пекар дивиться на батони із посмішкою"
+        />
       </section>
-      <section>
-        <h2>Наші найкращі шеф -кухарі</h2>
+      <section id="chefs-section">
+        <h2 class="section-title">
+          Наші найкращі <span class="accent">шеф -кухарі</span>
+        </h2>
         <ul>
-         <li>
-            <articel>
-               <h3>Настя</h3>
-               <p>Привіт, я Настя!</p>
-               <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-               <p>Я випічу для вас найсмачніщі вироби!</p>
+          <li>
+            <article>
+              <h3>Настя</h3>
+              <p>Привіт, я Настя!</p>
+              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+              <p>Я випічу для вас найсмачніщі вироби!</p>
             </article>
-         </li>
-         <li>
-            <articel>
-               <h3>Влад</h3>
-               <p>Привіт, я Влад!</p>
-               <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами
-            через нашу випічку!</p>
-             <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+          </li>
+          <li>
+            <article>
+              <h3>Влад</h3>
+              <p>Привіт, я Влад!</p>
+              <p>
+                Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов,
+                з якою ми ділимось кожен раз з Вами через нашу випічку!
+              </p>
+              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
             </article>
-         </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Формати</h2>
-      <ul>
-         <li>
-            <articel>
-            <h3 lang="en">Walrus</h3>
-          </articel>
-         </li>
-         <li>
-            <articel>
-               <h3 lang="en">Horseshoe</h3>
-            </articel>
-         </li>
-         <li>
-            <articel>
-               <h3 lang="en">Handlebar</h3>
-            </articel>
-         </li>
-      </ul>
-   </section>
-   <section>
-      <h2>Приєднуйся до мережі пекарень</h2>
+          </li>
+        </ul>
+      </section>
+      <section id="formats-section">
+        <h2 class="section-title">Формати</h2>
+        <ul>
+          <li>
+            <article>
+              <h3 lang="en">Walrus</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Horseshoe</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Handlebar</h3>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section id="contact-section">
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1638712577105!2d30.488658577128042!3d50.45667308691491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2sde!4v1710671452247!5m2!1suk!2sde"
+          width="603"
+          height="595"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
     <footer>
       <nav>
-         <a href="#">
-         <img src="./imiges/logo.svg" alt="Логотип Сучасної пекарні">
-         </a>
-         <ul>
-          <li><a href="#">Франшиза</a></li>
+        <a href="./index.html">
+          <img src="./imiges/logo.svg" alt="Логотип Сучасної пекарні" />
+        </a>
+        <ul>
           <li><a href="#">Наші традиції</a></li>
+          <li><a href="#">Шеф Кухарі</a></li>
           <li><a href="#">Формати</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
       <address>
-         <ul>
-            <li>
-               <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
-            </li>
-            <li>
-               <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
-            </li>
-            <li>
-               <a href="https://maps.app.goo.gl/g6LaZMuWv5UyDZ9k8"target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a>
-            </li>
-            <li>
-               <a href="#">
-                  <!-- facbook icon -->
-               </a>
-            </li>
-            <li>
-               <a href="#">
-                  <!-- instagram icon -->
-               </a>
-            </li>
-         </ul>
-         <a href="#"target="">Політика конфідейційності</a>
-         <p>© 2022 Дані захищені</p>
+        <ul>
+          <li>
+            <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+          </li>
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/g6LaZMuWv5UyDZ9k8" target="_blank"
+              >Україна, м. Київ, вул. Січових Стрільців 54</a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <!-- facbook icon -->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- instagram icon -->
+            </a>
+          </li>
+        </ul>
+        <a href="#" target="#">Політика конфідейційності</a>
+        <p>&COPY; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
